Fix default button color in dark mode

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   gap: 1.4rem;
+  color: var(--color-dark-text-and-icons);
 }
 
 .button1,
